--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Flask-WTF
 Jinja2
 sqlalchemy
 mysql-connector-python
-langchain==0.3.7
-langchain-groq
+langchain
+langchain_community
+langchain_groq
 python-dotenv
